<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/hintDefault"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="20sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDefault"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/btnDefault"
        android:textSize="15sp"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imgMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDefault"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imgMoney"
        android:src="@drawable/money" />
</RelativeLayout>